# fortran-template

./: .fprettify.rc  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_SETUP.md  build_dll.sh  ford.md  fpm.toml  setup.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
cmake/: README.md
docs/: API.md  README.md  ford_project.md
example/: simple_example.f90
examples/: README.md  math_demo.f90
src/: CMakeLists.txt  main.f90  math_utils.f90  string_utils.f90
test/: test_main.f90  test_string_utils.f90
tests/: CMakeLists.txt  test_math_utils.f90
